maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:71: error: ')' expected but 'if' found.
    if(!aMurNord(getX(),getY()){
    ^JediEscaper:77: error: ')' expected but 'if' found.
     if(!aMurOuest(getX(),getY()){
     ^JediEscaper:83: error: ')' expected but 'if' found.
    if(!aMurSud(getX(),getY()){
    ^JediEscaper:90: error: ')' expected but 'for' found.
    for(i<-1 to dir-1){gauche()}
    ^